# Black_Hat_Rust_Offensive

./: .gitignore  README.md
chapter_2/: Cargo.toml
chapter_2/src/: main.rs  modules.rs
chapter_2/src/modules/: scan_subdomain_ports.rs  subdomain_extractor.rs
chapter_3/: Cargo.toml
chapter_3/src/: main.rs
chapter_3/src/modules/: scan_subdomain_ports.rs  subdomain_extractor.rs
chapter_4/: Cargo.toml
chapter_4/src/: cli.rs  lib.rs  main.rs
chapter_4/src/scanner/: web.rs
chapter_4/src/scanner/web/: banner_grabbing.rs  disclosure.rs
