[package]
name = "chapter_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
trust-dns-resolver = "*"
rayon = "1.5"
regex = "1.5"